# TCP-Chat

./: .gitignore  CLAUDE.md  README.md  TCP-Chat.spec  client.py  client_output.txt  client_ui.py  config.json  file_version_info.txt  install.bat  main.py  pyproject.toml  requirements.txt  server.py  server_debug.txt  setup.bat  setup.py  实验报告.txt  打包说明.md
debug/: debug_topbar.py
docs/arch/: 2026-06-21-setup-installer.md  2026-06-22-公共组件抽取方案.md  2026-06-22-图标穿透性缺失诊断与修复方案.md  2026-06-22-打包与安装包方案-图标驱动.md  2026-06-22-窗口与EXE图标方案.md  2026-06-22-统一图标管理器.md
scripts/: client.py  client_ui.py
setup/: build_installer.bat  installer.iss  setup_utils.py  version_info.txt
tcp_chat/: __init__.py  __main__.py  client.py  config.py  log_config.py  server.py  tunnel.py
tcp_chat/file_transfer/: __init__.py  __main__.py  bitmap.py  cli.py  protocol.py  receiver.py  sender.py  session.py  tunnel.py
tcp_chat/ui/: app.py  cache_manager.py  chat_page.py  create_room_page.py  dialogs.py  file_transfer_ui.py  icon_manager.py  icons.py  initial_interface.py  login_page.py  pages.py  patterns.py  start_page.py  tags.py  theme.py  widgets.py
test/: test_bore_multi.py  test_rclick_prog.py  test_rclick_win32.py  test_user_rclick.py
test/remote_receive/: receive.py
test/remote_send/: gen_40g.py  gen_500m.py  remote_sim.py  send.py
test/test_file_transfer/: test_bitmap.py  test_protocol.py  test_session.py  test_transfer.py
tests/: test_connect.py
tools/: build_icon.py  install_croc.bat  install_croc.py
