[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tcp-chat"
version = "1.0.0"
description = "基于 TCP Socket 的多客户端聊天室"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
